--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -7,4 +7,9 @@ html {
   justify-content: center;
   align-items: center;  
   font-family: "Open Sans", sans-serif;
-};
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
