HTML, CSS -> React

--- a/src/pages/cadastros/CadastroRealizado/cadastroRealizado.css
+++ b/src/pages/cadastros/CadastroRealizado/cadastroRealizado.css
@@ -1,18 +1,11 @@
-html {
-    background-image: url(/assets/image/Depositphotos_10735175_xl-20152\ 1.png);
-}
-
-.container {
+.cadastroRealizado {
+    height: 100vh;
+    background-image: url("/image/Depositphotos_10735175_xl-20152 1.png");
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 573px;
-    height: 600px;
-}
-
-.logoHealth {
-    width: 282px;
-    height: 50px;
+    justify-content: center;
+    height: 650px;
 }
 
 .sucessoImg {
@@ -49,26 +42,4 @@ p {
     color: #fff;
     background-color: #144A6A;
     border: none;
-}
-
-.logoIcc {
-    margin-top: 40px;
-}
-
-
-.lines {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-}
-
-.line_green {
-    height: 7px;
-    background-color: #98C2AA;
-}
-
-.line_blue {
-    height: 21px;
-    background-color: #144A6A;
 }
