--- a/src/App.css
+++ b/src/App.css
@@ -76,8 +76,8 @@
 }
 
 @media screen and (min-width: 768px) {
-    .container {
-        width: 60%;
+    .App {
+        height: 100vh;
     }
 }
 
