--- a/src/pages/cadastros/CadastroUsuario/cadastroUsuario.css
+++ b/src/pages/cadastros/CadastroUsuario/cadastroUsuario.css
@@ -1,10 +1,12 @@
 .cadastroUsuario {
     height: 100vh;
-    background-image: url("/image/Depositphotos_10735175_xl-20152 1.png");
     display: flex;
     align-items: center;
     justify-content: center;
     height: 650px;
+    background-image: url("/image/Depositphotos_10735175_xl-20152 1.png");
+    background-size: cover; 
+    background-position: center;
 }
 
 .containerCadastro {
@@ -56,6 +58,41 @@
     border: none;
 }
 
+@media screen and (max-width: 600px) {
+    .cadastroUsuario {
+        display: flex;
+        height: 100vh;
+    }
+    .containerCadastro {
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cadastroUsuario {
+        height: 100vh;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .cadastroUsuario {
+        display: flex;
+        height: 100vh;
+    }
+    .containerCadastro {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .cadastroUsuario {
+        display: flex;
+        height: 100vh;
+    }
+    .containerCadastro {
+        width: 75%;
+    }
+}
 
 
 
