--- a/src/pages/cadastros/RecuperarSenha/confirmarToken.css
+++ b/src/pages/cadastros/RecuperarSenha/confirmarToken.css
@@ -1,6 +1,5 @@
 .confirmarToken {
     height: 100vh;
-    background-image: url("/image/Depositphotos_10735175_xl-20152 1.png");
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,4 +53,40 @@
     color: #fff;
     background-color: #144A6A;
     border: none;
+}
+
+@media screen and (max-width: 600px) {
+    .confirmarToken {
+        display: flex;
+        height: 100vh;
+    }
+    .containerConfirmarToken {
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .confirmarToken {
+        height: 100vh;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .confirmarToken {
+        display: flex;
+        height: 100vh;
+    }
+    .containerConfirmarToken {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .confirmarToken {
+        display: flex;
+        height: 100vh;
+    }
+    .containerConfirmarToken {
+        width: 75%;
+    }
 }
