Atualizações de responsividade

--- a/src/pages/cadastros/CadastroUsuario/cadastroUsuario.css
+++ b/src/pages/cadastros/CadastroUsuario/cadastroUsuario.css
@@ -23,9 +23,9 @@
     z-index: 0;
 }
 
-.text {
+.textCadastro {
     z-index: 1;
-    margin-top: -75px;
+    margin-top: -115px;
     color: #fff;
 }
 
