--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,3 +9,10 @@ header {
     position: fixed;
 }
 
+
+@media screen and (max-width: 600px) {
+
+    header {
+        position: absolute;
+    }
+}
