--- a/src/components/menu/cardMenu/cardmenu.css
+++ b/src/components/menu/cardMenu/cardmenu.css
@@ -1,30 +1,40 @@
 .card {
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    width: 187px;
-    height: 187px;
-    margin: 25px;
+    width: 185px;
+    height: 185px;
+    margin: 15px;
+    border-radius: 20px;
     border: 1px solid #ccc;
-    border-radius: 36px;
     box-shadow:  5px 5px 5px rgba(0, 0, 0, 0.3);
-}
-
-.to_card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
 }
 
 .card img {
     width: 90px;
-    height: 90px;
 }
 
 .card_text {
     font-size: 16px;
     font-weight: bolder;
     color: #144A6A;
+}
+
+@media screen and (max-width: 600px) {
+    .card {
+        width: 120px;
+        height: 120px; 
+        border-radius: 20px;
+        padding: 10px;
+    }
+    .card img {
+        width: 40px;
+
+    }
+    .card_text {
+        font-size: 12px;
+
+    }
+    
 }
