--- a/src/components/menu/sidebarMenu/sidebarmenu.css
+++ b/src/components/menu/sidebarMenu/sidebarmenu.css
@@ -3,6 +3,7 @@ ul {
     padding-inline-start: 0px;
     margin-block-start: 0em;
     margin-block-end: 0px;
+    
 }
 
 ul img {
@@ -11,12 +12,9 @@ ul img {
     margin-left: 10px;
 }
 
-.to_menu {
+.link_menu {
     display: flex;
     align-items: center;
-    color: inherit;
-    /* margin-left: 30px; */
-    text-decoration: none;
 }
 
 li {
@@ -25,21 +23,19 @@ li {
     align-items: center;
     width: 245px;
     height: 50px;
+    font-size: 14px;
+}
+
+.principal {
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: bold;
+    background-color: #144A6A;
+    color: #fff;
 }
 
 .menu_text {
     margin-left: 10px;
     font-size: 14px;
     font-weight: bold;
-    /* color: #144A6A; */
-}
-
-.line {
-    display: flex;
-    justify-content: center;
-}
-
-.menu_line {
-    width: 189px;
-    border: 1px solid #144A6A;
 }
