--- a/src/pages/menu/menu.css
+++ b/src/pages/menu/menu.css
@@ -1,35 +1,24 @@
 html, body {
     overflow-y: auto; 
-    align-items: start;
+    align-items: center;
+    justify-content: center;
 }
 
 .header {
     z-index: 0;
-    height: 90px;
+    position: fixed; 
 }
 
 .menu {
     display: flex;
-    flex-direction: row;
-    align-items: start;
-}
-
-
-.containerMenu {
-    display: flex;
-    z-index: 1;
 }
 
 .sidebarMenu {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 260px;
     height: 100vh;
     z-index: 1;
-    overflow-x: hidden;
     overflow-y: auto;
-    background-color: #fff;
+    background-color: #fff;    
 }
 
 .sidebarMenu::-webkit-scrollbar {
@@ -40,32 +29,75 @@ html, body {
     background-color: #144A6A;
 }
 
-#menuPrincipal {
-    background-color: #144A6A;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.line {
+main {    
     display: flex;
     justify-content: center;
-}
-
-.menu_line {
-    width: 189px;
-    border: 1px solid #144A6A;
-}
-
-main {    
-    width: 1090px;
-    margin: 5px 0 0 260px;
-    
+    width: 100%;
+    margin-top: 6rem; 
 }
 
 .cards {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     align-items: center;
-    justify-content: center;  
+    margin-left: 15rem;
+}
+  
+.menusvg {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: 70px;
+    height: 70px;
+    z-index: 1;
+    color: #144A6A;
+    position: fixed;
+}
+
+.menusvg img {
+    width: 40px;
+}
+
+@media screen and (max-width: 600px) {
+    .header{
+        position: relative;
+    }
+    .sidebarMenu {
+        display: none; 
+    }
+    .sidebarOpen .sidebarMenu {
+        display: block; 
+    }
+    .sidebarOpen .containerMenu {
+        flex-direction: column; 
+    }
+    .sidebarOpen main {
+        margin-left: 0; 
+    }
+    main {
+        display: flex;
+        width: 100vw;
+        flex-direction: column;
+        overflow: hidden;
+    }
+    .cards {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        margin: 0;
+
+    }
+}
+
+@media screen and (min-width: 768px) {
+  
+}
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 820px) {
+  
 }
