--- a/src/components/menu/sidebarMenu/sidebarmenu.css
+++ b/src/components/menu/sidebarMenu/sidebarmenu.css
@@ -3,7 +3,6 @@ ul {
     padding-inline-start: 0px;
     margin-block-start: 0em;
     margin-block-end: 0px;
-    
 }
 
 ul img {
@@ -17,7 +16,7 @@ ul img {
     align-items: center;
 }
 
-li {
+.liSidebar {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -38,4 +37,10 @@ li {
     margin-left: 10px;
     font-size: 14px;
     font-weight: bold;
+}
+
+@media screen and (max-width: 600px) {
+    .liSidebar {
+        height: 70px;
+    }
 }
