--- a/src/pages/menu/menu.css
+++ b/src/pages/menu/menu.css
@@ -15,7 +15,7 @@ html, body {
 
 .sidebarMenu {
     position: fixed;
-    height: 100vh;
+    height: 100%;
     z-index: 1;
     overflow-y: auto;
     background-color: #fff;    
@@ -64,6 +64,7 @@ main {
     }
     .sidebarMenu {
         display: none; 
+        height: 100vh;
     }
     .sidebarOpen .sidebarMenu {
         display: block; 
