--- a/src/components/menu/sidebarMenu/sidebarmenu.css
+++ b/src/components/menu/sidebarMenu/sidebarmenu.css
@@ -21,12 +21,14 @@ ul img {
     flex-direction: row;
     align-items: center;
     width: 245px;
-    height: 50px;
+    height: 65px;
     font-size: 14px;
 }
 
 .principal {
+    display: flex;
     width: 100%;
+    height: 65px;
     text-transform: uppercase;
     font-weight: bold;
     background-color: #144A6A;
@@ -42,5 +44,8 @@ ul img {
 @media screen and (max-width: 600px) {
     .liSidebar {
         height: 70px;
+    }
+    .principal {
+       height: 60px;
     }
 }
